# sequential-goals-planner

./: CMakeLists.txt  README.md  contextualplanner-config.cmake  orderedgoalsplanner-config.cmake  prioritizedgoalsplanner-config.cmake
data/ordered_goals/: domain.pddl  problem.pddl  problem_plan_result.pddl
data/prioritized_goals/: problem.pddl
data/sequential_goal/: problem.pddl
data/simple/: domain.pddl  problem.pddl  problem_plan_result.pddl
doc/: WORLD_STATE_CONDITION.md
include/contextualplanner/: action.hpp  contextualplanner.hpp  domain.hpp  expression.hpp  goal.hpp  goalsremovedtracker.hpp  historical.hpp  problem.hpp  setoffacts.hpp
include/contextualplanner/trackers/: factsaddedtracker.hpp  factschangedtracker.hpp  goalsremovedtracker.hpp
include/contextualplanner/types/: action.hpp  actioninvocation.hpp  actioninvocationwithgoal.hpp  axiom.hpp  condition.hpp  condtionstovalue.hpp  derivedpredicate.hpp  derivedpredicatebasedontwoinferences.hpp  domain.hpp  entity.hpp  event.hpp  expression.hpp  fact.hpp  factaccessor.hpp  factcondition.hpp  factmodification.hpp  factoptional.hpp  factsalreadychecked.hpp  factstovalue.hpp  facttoconditions.hpp  goal.hpp  goalstack.hpp  historical.hpp  inference.hpp  lookforanactionoutputinfos.hpp  onestepofplannerresult.hpp  ontology.hpp  parameter.hpp  predicate.hpp  problem.hpp  problemmodification.hpp  problemupdate.hpp  setofconstfacts.hpp  setofderivedpredicates.hpp  setofentities.hpp  setofevents.hpp  setoffacts.hpp  setofinferences.hpp  setofpredicates.hpp  setoftypes.hpp  (+4 more)
include/contextualplanner/types/enum/: expressionelementtype.hpp
include/contextualplanner/util/: alias.hpp  api.hpp  continueorbreak.hpp  print.hpp  replacevariables.hpp  util.hpp
include/contextualplanner/util/serializer/: deserializefrompddl.hpp  serializeinpddl.hpp
include/orderedgoalsplanner/: orderedgoalsplanner.hpp
include/orderedgoalsplanner/types/: action.hpp  actioninvocation.hpp  actioninvocationwithgoal.hpp  actionstodoinparallel.hpp  axiom.hpp  condition.hpp  conditiontocallback.hpp  condtionstovalue.hpp  derivedpredicate.hpp  domain.hpp  entity.hpp  event.hpp  fact.hpp  factoptional.hpp  factstovalue.hpp  goal.hpp  goalstack.hpp  historical.hpp  lookforanactionoutputinfos.hpp  ontology.hpp  parallelplan.hpp  parameter.hpp  predicate.hpp  problem.hpp  problemmodification.hpp  setofcallbacks.hpp  setofconstfacts.hpp  setofderivedpredicates.hpp  setofentities.hpp  setofevents.hpp  setoffacts.hpp  setofpredicates.hpp  setoftypes.hpp  type.hpp  worldstate.hpp  worldstatemodification.hpp
include/orderedgoalsplanner/util/: alias.hpp  api.hpp  arithmeticevaluator.hpp  continueorbreak.hpp  observableunsafe.hpp  print.hpp  replacevariables.hpp  util.hpp
include/prioritizedgoalsplanner/: prioritizedgoalsplanner.hpp
include/prioritizedgoalsplanner/types/: action.hpp  actioninvocation.hpp  actioninvocationwithgoal.hpp  actionstodoinparallel.hpp  axiom.hpp  condition.hpp  condtionstovalue.hpp  derivedpredicate.hpp  domain.hpp  entity.hpp  event.hpp  fact.hpp  factoptional.hpp  factstovalue.hpp  goal.hpp  goalstack.hpp  historical.hpp  lookforanactionoutputinfos.hpp  ontology.hpp  parameter.hpp  predicate.hpp  problem.hpp  problemmodification.hpp  setofconstfacts.hpp  setofderivedpredicates.hpp  setofentities.hpp  setofevents.hpp  setoffacts.hpp  setofpredicates.hpp  setoftypes.hpp  type.hpp  worldstate.hpp  worldstatemodification.hpp
include/prioritizedgoalsplanner/util/: alias.hpp  api.hpp  arithmeticevaluator.hpp  continueorbreak.hpp  observableunsafe.hpp  print.hpp  replacevariables.hpp  util.hpp
src/: contextualplanner.cpp  domain.cpp  goal.cpp  goalsremovedtracker.cpp  historical.cpp  orderedgoalsplanner.cpp  prioritizedgoalsplanner.cpp  problem.cpp  setoffacts.cpp
src/algo/: actiondataforparallelisation.cpp  actiondataforparallelisation.hpp  converttoparallelplan.cpp  converttoparallelplan.hpp  notifyactiondone.cpp  notifyactiondone.hpp
src/trackers/: factsaddedtracker.cpp  factschangedtracker.cpp  goalsremovedtracker.cpp
src/types/: action.cpp  actioninvocation.cpp  actioninvocationwithgoal.cpp  axiom.cpp  condition.cpp  condtionstovalue.cpp  derivedpredicate.cpp  derivedpredicatebasedontwoinferences.cpp  domain.cpp  entity.cpp  event.cpp  expression.cpp  expressionParsed.cpp  expressionParsed.hpp  fact.cpp  factaccessor.cpp  factcondition.cpp  factmodification.cpp  factoptional.cpp  factsalreadychecked.hpp  factstovalue.cpp  facttoconditions.cpp  goal.cpp  goalstack.cpp  historical.cpp  inference.cpp  lookforanactionoutputinfos.cpp  onestepofplannerresult.cpp  ontology.cpp  parallelplan.cpp  parameter.cpp  predicate.cpp  problem.cpp  problemmodification.cpp  problemupdate.cpp  setofcallbacks.cpp  setofderivedpredicates.cpp  setofentities.cpp  setofevents.cpp  setoffacts.cpp  (+13 more)
src/util/: arithmeticevaluator.cpp  print.cpp  replacevariables.cpp  util.cpp  uuid.cpp  uuid.hpp
src/util/serializer/: deserializefrompddl.cpp  serializeinpddl.cpp
src/util/trackers/: factschangedtracker.cpp  goalsremovedtracker.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp  plannerusingexternaldata.hpp  test_arithmeticevaluator.cpp  test_callbacks.cpp  test_chatbotplanner.cpp  test_conditional_effects_requirement.cpp  test_evaluate.cpp  test_existential_preconditions_requirement.cpp  test_facttoconditions.cpp  test_facttoconditions.hpp  test_goalscache.cpp  test_ontology.cpp  test_ontology.hpp  test_parallelplan.cpp  test_pddl_serialization.cpp  test_pddl_serialization.hpp  test_planner.cpp  test_plannerWithSingleType.cpp  test_plannerWithSingleType.hpp  test_plannerWithoutTypes.cpp  test_plannerWithoutTypes.hpp  test_problems_in_data.cpp  test_problems_in_data.hpp  test_setoffacts.cpp  test_setoffacts.hpp  test_successionscache.cpp  test_successionscache.hpp  test_universal_preconditions_requirement.cpp  test_util.cpp  test_util.hpp  test_worldstate.cpp
tests/src/docexamples/: test_planningDummyExample.cpp  test_planningDummyExample.hpp  test_planningExampleWithAPreconditionSolve.cpp  test_planningExampleWithAPreconditionSolve.hpp
(+10 files in other folders)
